--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@probe.gl/test-utils": "^4.0.2",
     "@types/tape-promise": "^4.0.1",
     "@vis.gl/dev-tools": "^1.0.0",
+    "@vis.gl/ts-plugins": "^1.0.0",
     "pre-commit": "^1.2.2",
     "pre-push": "^0.1.1",
     "puppeteer": "^23.4.0",
