--- a/modules/zarr/package.json
+++ b/modules/zarr/package.json
@@ -1,12 +1,10 @@
 {
   "name": "@loaders.gl/zarr",
-  "version": "4.4.0-alpha.4",
+  "version": "4.4.0-alpha.5",
   "description": "Framework-independent loaders for Zarr",
   "license": "MIT",
   "type": "module",
-  "publishConfig": {
-    "access": "public"
-  },
+  "private": true,
   "repository": {
     "type": "git",
     "url": "https://github.com/visgl/loaders.gl"
@@ -44,5 +42,5 @@
   "peerDependencies": {
     "@loaders.gl/core": "4.4.0-alpha.1"
   },
-  "gitHead": "f1a6da2c65e4ea06b59c61d1884819b6be577fe3"
+  "gitHead": "8a9e77743ea90a7be4ebec572416bb50ca9d73c3"
 }
