--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,7 @@ jobs:
 
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      NPM_ACCESS_TOKEN: ${{ secrets.NPM_ACCESS_TOKEN }}
 
     steps:
       - name: Checkout code
@@ -83,7 +83,9 @@ jobs:
         run: npx ocular-test dist
 
       - name: Login to NPM
-        run: npm config set "//registry.npmjs.org/:_authToken=${NPM_TOKEN}"
+        run: npm config set "//registry.npmjs.org/:_authToken=${NPM_ACCESS_TOKEN}"
 
       - name: Publish to NPM
+        env:
+          NPM_CONFIG_LOGLEVEL: verbose
         run: npx ocular-publish from-git
